--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^18.0.6"
+    "@types/node": "^18.0.6",
+    "express": "^4.21.2",
+    "moment": "^2.30.1",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
